# games-fastapi

./: .env.dev  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-full-ci.yml
api/: app.py  database.py  environment.py  games.py  models.py  reviews.py
docker/: .dockerignore  Dockerfile-api  Dockerfile-nginx  Dockerfile.api  Dockerfile.nginx  docker-compose.yaml
nginx/: nginx.conf
tests/: __init__.py  conftest.py  test_app.py  test_games.py  test_reviews.py
utils/: deploy.sh  ensure-prod-reqs.py  format.sh  match-requirements.py  pre-commit.sh  pytest-with-coverage.sh  run-dev.sh  start-postgres-dev.sh  update-requirements.sh
