# setup.cfg: a setuptools-based declarative configuration for the Games-FastAPI app
# Reference:
#   https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
# Dependencies specified here should ideally not be pinned, unless
# recommended by the package itself. This follows best practices
# established by PyPA:
#   https://packaging.python.org/discussions/install-requires-vs-requirements/

[metadata]
name = Games-FastAPI
version = 1.0
description = The Games-FastAPI app has CRUD operations for food games.
long_description = file: README.md
long_description_content_type = text/markdown
author = Theodore Williams
author_email = theodore.f.williams@gmail.com
project_urls =
    Source=https://github.com/VerdantFox/games-fastapi

[options]
package_dir =
    =.
packages =
    api
install_requires =
  # Code quality
  bandit
  black
  flake8
  isort
  mypy
  pre-commit
  types-requests
  types-setuptools
  types-sqlalchemy
  # pytest
  pytest
  pytest-cov
  # web
  fastapi
  gunicorn
  python-dotenv
  requests
  uvicorn
  # database
  sqlmodel
  psycopg2-binary

# Configurations

[flake8]
# Note: can ignore an individual line's errors with # noqa at end of line (inline)

# ---- Errors for flake8 to ignore ----
ignore =

  # Line break before binary operator
  # (Black uses this sometimes for cleaner looking when splitting large lines)
  W503,

# ---- Files/folders for flake8 to exclude ----
exclude =
  venv,
  tmp

# ---- Maximum number of characters per line ----
# (80 chars is too short. Please soft cap line length at 100 chars, hard cap at 120)
max-line-length = 120

[isort]
# These changes reconcile isort with black
virtual_env = venv
skip_glob = venv/*
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
